Added InitPacketData class

--- a/DFU-Library/DFU-Library.csproj
+++ b/DFU-Library/DFU-Library.csproj
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,10 +60,12 @@
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\RemoteDfuException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UnknownResponseException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UploadAbortedException.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\Manifest\InitPacketData.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
@@ -76,9 +81,7 @@
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="No\NordicSemi\Droid\DFU\Manifest\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
