--- a/DFU-Library/DFU-Library.csproj
+++ b/DFU-Library/DFU-Library.csproj
@@ -60,6 +60,7 @@
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\RemoteDfuException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UnknownResponseException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UploadAbortedException.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\Manifest\FileInfo.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\InitPacketData.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
