--- a/DFU-Library/DFU-Library.csproj
+++ b/DFU-Library/DFU-Library.csproj
@@ -59,18 +59,23 @@
     <Compile Include="No\NordicSemi\Droid\DFU\DfuActionReceiver.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\DfuBaseService.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\DfuSettingsConstants.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\Events\BluetoothGattCharacteristicEventArgs.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\Events\DeviceConnectionStateChangeEventArgs.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\Events\GattEventArgs.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\DeviceDiconnectedException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\DfuException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\HexFileValidationException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\RemoteDfuException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UnknownResponseException.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Exception\UploadAbortedException.cs" />
+    <Compile Include="No\NordicSemi\Droid\DFU\GattCallback.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\HexInputStream.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\FileInfo.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\InitPacketData.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\Manifest.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\ManifestFile.cs" />
     <Compile Include="No\NordicSemi\Droid\DFU\Manifest\SoftDeviceBootloaderFileInfo.cs" />
+    <Compile Include="No\NordicSemi\Droid\Error\GattError.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
