--- a/DFU-Library/Properties/AndroidManifest.xml
+++ b/DFU-Library/Properties/AndroidManifest.xml
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="DFU_Library" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="DFU_Library.DFU_Library" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
 	<application android:label="DFU-Library" android:icon="@drawable/Icon"></application>
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
