--- a/DFU-Library/packages.config
+++ b/DFU-Library/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="MonoAndroid22" />
+  <package id="Xamarin.Android.Support.v4" version="22.1.1.1" targetFramework="MonoAndroid50" />
 </packages>
